--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -10,14 +10,14 @@ jobs:
         python-version: ["3.9"]
     steps:
     - uses: actions/checkout@v3
+    - name: Install poetry
+      run: pipx install poetry
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
+        cache: 'poetry'
+    - run: poetry install
     - name: Analysing the code with pylint
       run: |
-        flake8 .
+        flake8 . --append-config ./pyproject.toml
