Front: cell coordinates tooltip; Back: integrated bot; MCTS: manual moves for human play recording; logging

--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,14 @@
   "description": "ho man...",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts ../ui/build"
+    "build": "react-scripts build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
@@ -22,5 +24,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4"
   }
 }
